# TextFileProcessor

./: CMakeLists.txt  FactoryStringProccessor.cpp  FactoryStringProccessor.h  README.md  StringProcessFactory.cpp  StringProcessFactory.h  TextFileManager.cpp  TextFileManager.h  main.cpp  processorManager.cpp  processorManager.h  program
ProcessClass/: BasicStringProcess.h  DoLowerCase.cpp  DoLowerCase.h  DoUpperCase.cpp  DoUpperCase.h  Process.h  SetFirstCharUp.cpp  SetFirstCharUp.h
stringResouce/: InOutReSource.cpp  InOutReSource.h  ResourceFactory.cpp  ResourceFactory.h  TextFileManager.cpp  TextFileManager.h
utils/: ProcessOrder.h  StrStruct.h
